--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,16 @@
+body {
+    background-image:url(./images/cutebackground.png);
+    background-size: cover;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:bold;
+    text-align:center;
+}
+
+h1{
+    margin-top:10px;
+    margin-bottom: 10px
+}
+
 h2 {
     font-size: 50px;
     margin-top: 0;
@@ -18,7 +31,7 @@ button {
 
 #increment-btn{
     align-items: center;
-    background: darkred;
+    background: lightblue;
 }
 
 #save-btn{
