--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,15 @@ body {
     text-align:center;
 }
 
+.container{
+    background:white;
+    max-width: 80%;
+    margin: auto; 
+    border: 3px solid black;
+    border-radius: 10px; 
+    opacity: 80%;
+}
+
 h1{
     margin-top:10px;
     margin-bottom: 10px
@@ -18,7 +27,7 @@ h2 {
 }
 
 button {
-    border: none;
+    border: 1px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
